--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@babel/preset-env": "^7.8.4"
   },
   "dependencies": {
+    "antd-iconfont": "^3.0.3",
     "jquery": "^3.6.0"
   },
   "sideEffects": [
